--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/HPD-CODER/React-JS-Finish-Code",
+  "homepage": "https://hpd-coder.github.io/React-JS-Finish-Code/",
   "name": "react-trainning-app",
   "version": "0.1.0",
   "private": true,
